[gd_scene load_steps=14 format=2]

[ext_resource path="res://Art/EndChoice.png" type="Texture" id=1]
[ext_resource path="res://Ending.gd" type="Script" id=2]
[ext_resource path="res://Themes/SpookyTheme.tres" type="Theme" id=3]
[ext_resource path="res://Sounds/Slash.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 237, 682, 237 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 474, 682, 237 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 711, 682, 237 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 948, 682, 237 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 1185, 682, 237 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 1422, 682, 237 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 1659, 682, 237 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 682, 237 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 1 ) ],
"loop": false,
"name": "AttackLeft",
"speed": 10.0
}, {
"frames": [ SubResource( 1 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 1 ) ],
"loop": false,
"name": "AttackRight",
"speed": 10.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "Start",
"speed": 5.0
} ]

[node name="Ending" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="ReportCard" type="Label" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 192.0
margin_right = -192.0
theme = ExtResource( 3 )
text = "You Are Fired."
align = 1
valign = 1
autowrap = true

[node name="Cutscene" type="AnimatedSprite" parent="."]
position = Vector2( 560, 298 )
scale = Vector2( 2.2522, 2.54852 )
frames = SubResource( 9 )
animation = "Start"

[node name="Left" type="Button" parent="."]
anchor_top = 0.747
anchor_right = 0.531
anchor_bottom = 1.0
margin_top = -0.200012
margin_right = -31.744
rect_pivot_offset = Vector2( 96, 28 )
theme = ExtResource( 3 )
text = "Finish the job"

[node name="Right" type="Button" parent="."]
anchor_left = 0.531
anchor_top = 0.747
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.256
margin_top = -0.200012
rect_pivot_offset = Vector2( 96, 28 )
theme = ExtResource( 3 )
text = "Another Path?"

[node name="Slash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
